--- a/Pingfan.WebServer/Pingfan.WebServer.csproj
+++ b/Pingfan.WebServer/Pingfan.WebServer.csproj
@@ -12,8 +12,8 @@
 
         <PackageProjectUrl>https://github.com/oliverscode/Pingfan.WebServer</PackageProjectUrl>
         <RepositoryUrl>https://github.com/oliverscode/Pingfan.WebServer</RepositoryUrl>
-        <PackageIcon>logo.png</PackageIcon>
         <PackageLicenseUrl>https://github.com/oliverscode/Pingfan.WebServer</PackageLicenseUrl>
+        <PackageIcon>logo.png</PackageIcon>
 
 
     </PropertyGroup>
@@ -27,6 +27,13 @@
     <ItemGroup>
         <None Include="./logo.png">
             <Pack>True</Pack>
+            <PackagePath></PackagePath>
+            
         </None>
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <PackageReference Include="Pingfan.Inject" Version="1.0.1" />
     </ItemGroup>
 </Project>
