--- a/Pingfan.WebServer/Pingfan.WebServer.csproj
+++ b/Pingfan.WebServer/Pingfan.WebServer.csproj
@@ -34,6 +34,8 @@
 
 
     <ItemGroup>
-      <PackageReference Include="Pingfan.Inject" Version="1.0.1" />
+      <Reference Include="Pingfan.Inject">
+        <HintPath>..\..\Pingfan.Inject\Pingfan.Inject\bin\Release\netstandard2.0\Pingfan.Inject.dll</HintPath>
+      </Reference>
     </ItemGroup>
 </Project>
